# dynamic-3d-object-removal

./: .gitignore  AGENTS.md  LICENSE  README.md  bench.py  dynamic_object_removal.py  index.html  plan.md  pyproject.toml  realtime.py
.github/workflows/: gh-pages.yml  pages.yml  test.yml
demo/: actual_scan_20240820_cloud.pcd  actual_scan_20240820_objects.json  demo_input.xyz  demo_objects.json  demo_output.xyz  demo_scene.json  index.html  index_3d.html  index_3d_av2.html  index_3d_scan_standalone.html  index_3d_standalone.html  open_latest_report.sh  run_demo.py  run_scan_demo.py  run_scan_sequence_demo.py  social_card.html
scripts/: download_av2_sample.py  download_kitti_sample.py
tests/: conftest.py  test_dynamic_object_removal.py  test_sequence_demo.py
